# TradeSim-Pro

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
data/: historical_data.csv
include/: market_data.h  trading_algorithms.h
python/: backtesting.py  data_analysis.py
src/: main.cpp  market_data.cpp  trading_algorithms.cpp
tests/: test_trading_algorithms.cpp
